# RapidOCRServer

./: README.md  pyproject.toml  requirements.txt
rapidocr_server/: __init__.py  exceptions.py  main.py  ocr_engine.py  router.py  schemas.py
tests/: default_rapidocr.yaml
